--- a/public/bootstrap/css/amelia.bootstrap.css
+++ b/public/bootstrap/css/amelia.bootstrap.css
@@ -4538,7 +4538,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   background-color: #485563;
 }
 .navbar-default .navbar-toggle .icon-bar {
-  background-color: #ebebeb;
+  background-color: #ffffff;
 }
 .navbar-default .navbar-collapse,
 .navbar-default .navbar-form {
