--- a/app_server/views/location-info.jade
+++ b/app_server/views/location-info.jade
@@ -60,3 +60,24 @@ block content
                                 span.glyphicon.glyphicon-star
                                 span.glyphicon.glyphicon-star
                                 span.glyphicon.glyphicon-star
+                            span.reviewAuthor  Simon Holmes,
+                            small.reviewTimestamp  16 Julho 2016
+                        .col-xs-12
+                            p What a great place. I ca't say enough good things about it.
+                .row
+                    .review
+                        .well.well-sm.review-header
+                            span.rating
+                                span.glyphicon.glyphicon-star
+                                span.glyphicon.glyphicon-star
+                                span.glyphicon.glyphicon-star
+                                span.glyphicon.glyphicon-star
+                                span.glyphicon.glyphicon-star
+                            span.reviewAuthor  Deni devitow,
+                            small.reviewTimestamp  18 Agosto 2018
+                        .col-xs-12
+                            p Lugarzinho meia boca fio
+    .col-xs.col-md-3
+        p.lead
+            | Starcups está no loc8r porque é um lugar acessivel e tem um bom wifi para vocÊ sentar e usar seu laptop para trabalhar ou relaxar.
+        p Se você tem algum elogio ou reclamação por favor deixe sua resenha sobre o estabelecimento.
